All_Component_DX/force-app/main/default/objects/SPM_First_Time_Fix__c/SPM_First_Time_Fix__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This Object is used to capture first time fix details.</description>
    <label>SPM - First Time Fix</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - First Time Fix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>