All_Component_DX/force-app/main/default/objects/SPM_First_Time_Fix__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to account object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SPM_First_Time_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>