All_Component_DX/force-app/main/default/objects/SPM_First_Time_Fix__c/fields/Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Method__c</fullName>
    <description>This field is used to capture calculation method.</description>
    <inlineHelpText>This field is used to capture calculation method.</inlineHelpText>
    <label>Calculation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>