All_Component_DX/force-app/main/default/objects/SPM_First_Time_Fix__c/fields/Fixed_On__c.field-meta.xml
<CustomField>
    <fullName>Fixed_On__c</fullName>
    <description>This field is used to capture the workorder fixed date</description>
    <label>Fixed On</label>
    <type>Date</type>
</CustomField>