All_Component_DX/force-app/main/default/objects/SPM_First_Time_Fix__c/fields/Is_Fixed_First_Time__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_First_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to capture is this workorder is fixed on first time or not</description>
    <label>Is Fixed First Time?</label>
    <type>Checkbox</type>
</CustomField>