All_Component_DX/force-app/main/default/objects/SPM_First_Time_Fix__c/fields/Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPM_First_Time_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>