All_Component_DX/force-app/main/default/objects/SPM_First_Time_Fix__c/fields/Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipName>SPM_First_Time_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>