All_Component_DX/force-app/main/default/objects/SPM_First_Time_Fix__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Technician</description>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipName>FTF_Details</relationshipName>
    <type>Lookup</type>
</CustomField>